# computer_vision_basic

./: README.md
3d_reconstruction/: CMakeLists.txt  README.md
3d_reconstruction/include/3d_reconstruction/: featuresmatching.h  geometry.h  norm.h
3d_reconstruction/src/: featuresmatching.cpp  geometry.cpp  pmvs.cpp  pose_estimation.cpp  structure_from_motion.cpp
brother_earth/: CMakeLists.txt  README.md
brother_earth/src/: cross_light_detection.cpp  fast_hough_circle.cpp  orientation_fft.cpp
canny_edge_detection/: CMakeLists.txt  README.md
canny_edge_detection/src/: canny_edge_detection.cpp
card_detection/: README.md
card_detection/src/: card_detection.cpp
electricity_bill/: README.md
electricity_bill/src/: electricity_bill.cpp
hough_line/: CMakeLists.txt  README.md
hough_line/src/: hough_line.cpp
image_interpolation/: CMakeLists.txt  README.md
image_interpolation/src/: image_interpolation.cpp
image_segmentation/: CMakeLists.txt  README.md
image_segmentation/src/: grabcut_segmentation.cpp  graphcuts_segmentation.cpp  watershed_segmentation.cpp
sudoku_detection/: CMakeLists.txt  README.md
sudoku_detection/src/: sudoku_detection.cpp
vehicle_tracking/: README.md
vehicle_tracking/src/: vehicle_tracking.cpp
